# presentation

./: .devcontainer.json  .gitignore  .travis.yml  Dockerfile  Makefile  README.md  dazzleSketch.js  docker-compose.yml  index.html  myslides.html  presentation.html  presentation.md  requirements-dev.txt  requirements.txt  slide.md  slides.md  template.html  test.html
.circleci/: config.yml
.devcontainer/: devcontainer.json  docker-compose.yml
assets/: README.md
docs/: index.html
example/: example.html
fast.ai/: fast.ai.html
preo/: config.yml  duplication.md  preo.html  slides.html  test.md
present/: config.yaml  index.md
public/: index.html
py-scripts/: pyproject.toml  requirements-dev.txt  setup.cfg  tox.ini
py-scripts/src/: generator.py  livereload_server.py  org.py
py_scripts/: generate_index.py  live_server.py
resources/highlight/: DIGESTS.md  highlight.js  highlight.min.js
sh_scripts/: purge_build.sh
shell-scripts/: build-top.sh  entry.sh  notifyUser.sh
slides/: config.yml  index.md  slides.html  slides.md
slides/example/: duplication.md  test.md
slides/fast.ai/: config.yml  intro.md  w1.md  w2.md  w3.md  w4.md  w5.md  w6.md  w7.md  w8.md
slides/slides/: slides.md
templates/: index.html  index_template.html  template.html
templates/static/: style.css
