[metadata]
name = py-scripts
author = Kirubel Tadesse
author_email = kirubel.m.tadesse@gmail.com
summary = A Python script to generate a script to run a Python script
description-file = README.md

[options]
packages = 
    py-scripts
package_dir = 
    py-scripts = src
zip_safe = False
python_requires = >=3.6
install_requires = 
    click
    jinja2
    livereload
    pyyaml
    termcolor

[options.package_data]
scripts = 
    py.typed

[options.entry_points]
console_scripts = 
    py-script = py-scripts.org:main
    extract-deps = py-scripts.extract_deps:main
    linter = py-scripts.linter:main
    livereload-server = py-scripts.livereload_server:main
    render-jinja2 = py-scripts.render_jinja2:main

